# rafale

./: .gitignore  README.md  cpu-mac-pyproject.toml  cuda-linux-pyproject.toml  cuda-requirements.txt  generate_llm_docprompt.sh  llm-docprompt.txt  pyproject.toml  setup.py  wip.md
rafale/: caches.py  data_configurations.py  datapipe.py  main.py  run.py  test.yaml
rafale/models/: configurations.py  convert_hf_weights.py  debug_encoders.py  decoder.py  decoding_strategies.py  encoder.py  model_utils.py  roberta.py  test_pythia.py
test/: bert_tiny_imdb.yaml  pythia_tinystories.yaml  test.yaml  test_bert.py  test_pythia.py  test_pythia_generation.py
