[project]
name = "rafale"
version = "0.0.1"
description = "opinionated transformer training cli"
readme = "README.md"
requires-python = "==3.12"
# just for local dev no dependencies
#dependencies = [
#    "composer>=0.26.0",
#    "datasets",
#    "tokenizers",
#    "torch>=2.5.0",
#    "safetensors",
#    "torchmetrics>=1.4.0.post0",
#    "wandb>=0.18.5",
#]
packages = [{include = "rafale"}]
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[project.optional-dependencies]
#dev = [
#    "transformers>=4.44.2"
#]
#