[project]
name = "rafale"
authors = [
		{name = "Maxime Rousseau"}
]
version = "0.1"
description = "simple transformer training lib"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/maxrousseau/rafale"

[tool.setuptools.packages.find]
where = ["rafale"]

[project.scripts]
rafale-run = "rafale.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
